@@ -16,6 +16,7 @@ PHP                                                                        NEWS
   . stream_socket_enable_crypto() (Wez)
   . stream_wrapper_unregister() (Sara)
   . stream_wrapper_restore() (Sara)
+  . stream_filter_remove() (Sara)
   . DomDocumentFragment->appendXML() (Christian)
   . SimpleXMLElement->registerXPathNamespace() (Christian)
   . mysqli->client_info property (Georg)
@@ -31,6 +32,7 @@ PHP                                                                        NEWS
 - Added HTTP/1.1 and chunked encoding support to http:// wrapper. (Sara)
 - Added support of parameter->value arrays to xsl_xsltprocessor_set_parameter() 
   (Tony)
+- Changed stream_filter_(ap|pre)pend() to return resource. (Sara)
 - Fixed bug with raw_post_data not getting set. (Brian)
 - Fixed bug in mysql->client_version. (Georg)
 - Fixed ZTS destruction. (Marcus)
